import { render, screen } from '@testing-library/react';
import { BrowserRouter, Outlet } from 'react-router-dom';
import App from './App';
import * as useAuth from './hooks/useAuth';

afterEach(() => {
  vi.clearAllMocks();
});

vi.mock('react-router-dom', async (importOriginal) => {
  const actual = await importOriginal();
  return {
    ...actual,
    Navigate: vi.fn(({ to }) => `Redirected to ${to}`),
    Outlet: vi.fn(),
  };
});

const useAuthSpy = vi.spyOn(useAuth, 'default');

describe('App', () => {
  describe('render from useAuth result', () => {
    test('should render loading', () => {
      useAuthSpy.mockReturnValue({
        authResult: null,
        authLoading: true,
        authError: null,
      });

      const { container } = render(<App />);
      expect(container).toMatchSnapshot();
    });

    test('should redirect to login', () => {
      useAuthSpy.mockReturnValue({
        authResult: null,
        authLoading: false,
        authError: { code: 401 },
      });

      const { container } = render(<App />);
      expect(container).toMatchSnapshot();
    });

    test('should render server error', async () => {
      useAuthSpy.mockReturnValue({
        authResult: null,
        authLoading: false,
        authError: true,
      });

      const { container } = render(
        <BrowserRouter>
          <App />
        </BrowserRouter>,
      );

      expect(container).toMatchSnapshot();
    });
  });

  describe('render from error redirect', () => {
    test('should render content error', async () => {
      useAuthSpy.mockReturnValue({
        authResult: true,
        authLoading: false,
        authError: null,
      });

      const { container } = render(
        <BrowserRouter>
          <App errorRedirect={true} />
        </BrowserRouter>,
      );

      expect(container).toMatchSnapshot();
    });
  });

  test('should render content', async () => {
    useAuthSpy.mockReturnValue({
      authResult: true,
      authLoading: false,
      authError: null,
    });

    Outlet.mockImplementationOnce(() => <div>Content Placeholder</div>);

    const { container } = render(
      <BrowserRouter>
        <App />
      </BrowserRouter>,
    );

    expect(container).toMatchSnapshot();
  });
});
