// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > render from error redirect > should render content error 1`] = `
<div>
  <div
    class="_App_6dc87e"
  >
    <div
      class="_Sidebar_26077f"
    >
      <a
        class="_logo_26077f"
        href="/"
      >
        Odin Book
      </a>
      <a
        class="_homeActive_26077f"
        href="/"
      >
        Home
      </a>
      <a
        class="_users_26077f"
        href="/users"
      >
        Users
      </a>
      <a
        class="_requests_26077f"
        href="/requests"
      >
        Requests
      </a>
      <button
        class="_create_26077f"
      >
        Create
      </button>
      <div
        class="_fullName_26077f"
      >
        <div
          class="_loading_69744d"
        >
          <div
            class="_sidebarPlaceholder_69744d"
          />
        </div>
      </div>
      <a
        class="_logout_26077f"
        href="/login"
      >
        Log Out
      </a>
    </div>
    <div
      class="_contentErrorContainer_6dc87e"
    >
      <div
        class="_contentError_6dc87e"
      >
        <h1>
          Oh no, this page doesn't exist!
        </h1>
        <a
          href="/"
        >
          You can go back to the home page by clicking here, though!
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`App > render from useAuth result > should redirect to login 1`] = `
<div>
   
  Redirected to /login
</div>
`;

exports[`App > render from useAuth result > should render loading 1`] = `
<div>
  <div
    class="_loading_6dc87e"
  >
    <div
      class="_loader_6dc87e"
    />
  </div>
</div>
`;

exports[`App > render from useAuth result > should render server error 1`] = `
<div>
  <div
    class="_errorContainer_6dc87e"
  >
    <h1>
      Oh no, this page doesn't exist!
    </h1>
    <a
      href="/"
    >
      You can go back to the home page by clicking here, though!
    </a>
  </div>
</div>
`;

exports[`App > should render content 1`] = `
<div>
  <div
    class="_App_6dc87e"
  >
    <div
      class="_Sidebar_26077f"
    >
      <a
        class="_logo_26077f"
        href="/"
      >
        Odin Book
      </a>
      <a
        class="_homeActive_26077f"
        href="/"
      >
        Home
      </a>
      <a
        class="_users_26077f"
        href="/users"
      >
        Users
      </a>
      <a
        class="_requests_26077f"
        href="/requests"
      >
        Requests
      </a>
      <button
        class="_create_26077f"
      >
        Create
      </button>
      <div
        class="_fullName_26077f"
      >
        <div
          class="_loading_69744d"
        >
          <div
            class="_sidebarPlaceholder_69744d"
          />
        </div>
      </div>
      <a
        class="_logout_26077f"
        href="/login"
      >
        Log Out
      </a>
    </div>
    <div
      class="_content_6dc87e"
    >
      <div>
        Content Placeholder
      </div>
    </div>
  </div>
</div>
`;
